crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_inherit_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 523
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo\n    {\n        public get() {}\n        public set(int value) {}\n    }\n    property int Bar\n    {\n        public get() {}\n        public set(int value) {}\n    }\n}\nmethodmap Bar < Foo {\n    public void Bar2() {}\n}\nBar bar;\nvoid main() {\n    bar.Bar;\n         |\n         ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 17,
        "character": 8
      },
      "end": {
        "line": 17,
        "character": 11
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 6,
        "character": 4
      },
      "end": {
        "line": 10,
        "character": 5
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 6,
        "character": 17
      },
      "end": {
        "line": 6,
        "character": 20
      }
    }
  }
]
