crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_inherit_3.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 553
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    property int Foo\n    {\n        public get() {}\n        public set(int value) {}\n    }\n    property int Bar\n    {\n        public get() {}\n        public set(int value) {}\n    }\n}\nmethodmap Bar < Foo {\n    property int Bar\n    {\n        public get() {}\n        public set(int value) {}\n    }\n}\nBar bar;\nvoid main() {\n    bar.Bar;\n         |\n         ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 21,
        "character": 8
      },
      "end": {
        "line": 21,
        "character": 11
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 13,
        "character": 4
      },
      "end": {
        "line": 17,
        "character": 5
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 13,
        "character": 17
      },
      "end": {
        "line": 13,
        "character": 20
      }
    }
  }
]
