crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_inherit_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 609
expression: "goto_definition(r#\"\n%! foo.sp\nmethodmap Foo {\n    property int Foo1\n    {\n        public get() {}\n        public set(int value) {}\n    }\n    property int Foo2\n    {\n        public get() {}\n        public set(int value) {}\n    }\n    property int Foo3\n    {\n        public get() {}\n        public set(int value) {}\n    }\n    property int Bar\n    {\n        public get() {}\n        public set(int value) {}\n    }\n}\n\n%! bar.sp\n#include \"foo.sp\"\nmethodmap Bar < Foo {\n    property int Bar\n    {\n        public get() {}\n        public set(int value) {}\n    }\n}\n\n%! main.sp\n#include \"bar.sp\"\n\nBar bar;\nvoid main() {\n    bar.Bar;\n         |\n         ^\n}\n\"#,)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 4,
        "character": 8
      },
      "end": {
        "line": 4,
        "character": 11
      }
    },
    "targetUri": "file:///bar.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 6,
        "character": 5
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 17
      },
      "end": {
        "line": 2,
        "character": 20
      }
    }
  }
]
