crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_method_8.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 151
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo < Bar {\n    public void Foo() {}\n                 |\n                 ^\n}\n\n%! bar.sp\nmethodmap Bar {\n    public void Bar1() {}\n    public void Bar2() {}\n    public void Bar3() {}\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 16
      },
      "end": {
        "line": 1,
        "character": 19
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 24
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 16
      },
      "end": {
        "line": 1,
        "character": 19
      }
    }
  }
]
